💄🌯 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Hello!</title>
     <link rel="stylesheet" href="/style.css">
+  <link>
     <script src="/script.js" defer></script>
   </head>  
   <body>
@@ -11,7 +12,9 @@
     <section>
   
     <h1>Maqueteando con Grid</h1>
-      <article>Articulo Uno
+      <article><h3>chinchulines
+        
+        </h3>rticulo Uno
       </article>
       
       <article>Articulo Dos
