☎️👫 Maquetando con Grid Glitch

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
   <head>
     <title>Hello!</title>
     <link rel="stylesheet" href="/style.css">
-  <link>
+   <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
     <script src="/script.js" defer></script>
   </head>  
   <body>
     <header>El Encabezado
     </header>
+    <nav>
+      <ul>
+        <li>uno</li>
+        <li>dos</li>
+        <li>tres</li>
+      </ul>
+    </nav>
     <section>
+      
   
     <h1>Maqueteando con Grid</h1>
       <article><h3>chinchulines
@@ -24,6 +32,7 @@
       </article>
     
  
-   </section> 
+   </section>
+    <footer>Pie de Pagina</footer>
   </body>
 </html>
